tests/baselines/reference/unqualifiedCallToClassStatic1.errors.txt
==== tests/cases/compiler/unqualifiedCallToClassStatic1.ts (1 errors) ====
    class Vector {
     static foo = () => {
      // 'foo' cannot be called in an unqualified manner.
      foo();
      ~~~
!!! error TS2095: Could not find symbol 'foo'.
     }
    }